# ML-Ops-31

./: .dvcignore  .gcloudignore  .gitignore  Makefile  README.md  cloudbuild.yaml  cloudbuild__.yaml  cloudbuild_deploy.yaml  data.dvc  deploy_model_cloudbuild.yaml  models.dvc  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt
.dvc/: config
.github/workflows/: codecheck.yaml  tests.yaml
02476 Hatespeech Classification/: train_model.py
02476 Hatespeech Classification/conf/experiments/: exp2.yaml
02476 Hatespeech Classification/data/: make_dataset.py
bash/: test.sh  train_docker.sh
conf/experiments/: exp1.yaml
dockerfiles/: deploy_model.dockerfile  deploy_model_cloudbuild.dockerfile  predict_model.dockerfile  train_model.dockerfile  train_model_cloudbuild.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
hatespeech_classification_02476/: __init__.py  app.py  app__.py  predict_cloudfunction.py  predict_model.py  train_model.py  webapi_test.py
hatespeech_classification_02476/conf/: config.yaml
hatespeech_classification_02476/conf/experiments/: exp1.yaml  exp2.yaml
hatespeech_classification_02476/conf/wandbconf/: info.yaml
hatespeech_classification_02476/data/: download_dataset.py  make_dataset.py
hatespeech_classification_02476/models/: model.py
models/: model.py
notebooks/: DataAnalysis.ipynb
reports/: README.md
reports/figures/: Project_Flowchart.drawio
tests/: test_data.py  test_make_data.py  test_model.py
vertex_config/: config_exp1.yaml  config_exp2.yaml
(+43 files in other folders)
